# Labs2

1/: main.cpp
2/: main.cpp
3/: main.cpp
4/: main.cpp
5/: main.cpp
6/: main.cpp
7/: main.cpp
S3-1/: CMakeLists.txt  main.cpp
Sem2/4/: main.cpp
Sem2/5/: CMakeLists.txt  DLList.h  Phone.h  main.cpp
Sem2/6/: main.cpp
Sem3/2/: main.cpp
Sem3/3/: App.cpp  App.h  CMakeLists.txt  DLList.cpp  DLList.h  DataObtaining.cpp  DataObtaining.h  Datetime.cpp  Datetime.h  UI.cpp  UI.h  main.cpp
Sem3/5/: 2DFigure.cpp  2DFigure.h  3DFigure.cpp  3DFigure.h  App.h  CMakeLists.txt  Figure.cpp  Figure.h  main.cpp
Sem3/7/: 2DFigure.cpp  2DFigure.h  3DFigure.cpp  3DFigure.h  App.cpp  App.h  Except.cpp  (+2 more)
Sem4/COM/1/: CMakeLists.txt  ClientServer.cpp  ClientServer.h  ClientServerWrapper.cpp  ClientServerWrapper.h  ClientVectorWrapper.cpp  IClassFactory.h  IUnknown.cpp  IUnknown.h  ManagerDLL.cpp  ManagerDLL.h  ModuleInfo.h  Server2Factory.cpp  Server2Factory.h  ServerFactory.cpp  ServerFactory.h  VectorFactory_.cpp  VectorFactory_.h  Vector_.cpp  Vector_.h  a.out  iserv.h  iserv2.h  main.cpp  serv.cpp  serv.h  serv2.cpp  serv2.h
Sem4/COM/1/dll/: ClientVectorWrapper.cpp  IUnknown.cpp  VectorFactory_.cpp  VectorPotenoteTaskFactory_.cpp  VectorPotenoteTask_.cpp  Vector_.cpp
Sem4/COM/1/headers/: ClientVectorWrapper.h  IClassFactory.h  IUnknown.h  IVector.h  IVectorMod.h  VectorPotenoteTaskFactory_.h  VectorPotenoteTask_.h  Vector_.h
Sem4/COM/1/servs/: ClientServerWrapper.h  Server2Factory.h  ServerFactory.cpp  ServerFactory.h  iserv.h  iserv2.h  serv.cpp  serv.h  serv2.h
(+244 files in other folders)
